[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/monogram.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/interface/slot_background.png" type="Texture" id=2]
[ext_resource path="res://assets/spell/dagger.png" type="Texture" id=3]
[ext_resource path="res://scripts/interface/spell_slot.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="SpellSlot" type="VBoxContainer"]
visible = false
margin_right = 66.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 0 )
alignment = 1
script = ExtResource( 4 )

[node name="SpellTexture" type="HBoxContainer" parent="."]
margin_right = 80.0
margin_bottom = 32.0
alignment = 1

[node name="ContainerBackground" type="TextureRect" parent="SpellTexture"]
margin_left = 24.0
margin_right = 56.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="SpellTexture" type="TextureRect" parent="SpellTexture/ContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="SpellName" type="Label" parent="."]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Dagger, Level: 1"
align = 1
valign = 1

[node name="SpellBuff" type="Label" parent="."]
margin_top = 47.0
margin_right = 80.0
margin_bottom = 67.0
rect_min_size = Vector2( 80, 20 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Attack Cooldown: -0.3s"
align = 1
autowrap = true
